kubernetes/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vip-customer-web
  namespace: vip-customer-app
spec:
  hosts:
  - "*"
  gateways:
  - vip-customer-web
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: vip-customer-web
        port:
          number: 3000
